Fixed tiles naming convention

--- a/unity/Assets/StreamingAssets/content/MoM/pots/tiles.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/pots/tiles.ini
@@ -1,204 +1,204 @@
-[TileStatueChamber]
+[TileSideStatueChamber]
 name={ffg:TILE_STATUE_CHAMBER_MAD28}
 image="{import}/img/Tile_Statue_Chamber_MAD28"
-reverse=TileRuinedHut
+reverse=TileSideRuinedHut
 traits=inside medium temple
 
-[TileBurialChamber]
+[TileSideBurialChamber]
 name={ffg:TILE_BURIAL_CHAMBER_MAD28}
 image="{import}/img/Tile_Burial_Chamber_MAD28"
-reverse=TileOvergrownPath
+reverse=TileSideOvergrownPath
 traits=inside small temple
 
-[TileBedChamber]
+[TileSideBedChamber]
 name={ffg:TILE_BED_CHAMBER_MAD28}
 image="{import}/img/Tile_Bed_Chamber_MAD28"
-reverse=TileJungleRuins1
+reverse=TileSideJungleRuins1
 traits=inside temple small
 
-[TileVerdantChamber]
+[TileSideVerdantChamber]
 name={ffg:TILE_VERDANT_CHAMBER_MAD28}
 image="{import}/img/Tile_Verdant_Chamber_MAD28"
-reverse=TileClearing1
+reverse=TileSideClearing1
 traits=inside small temple
 
-[TilePit]
+[TileSidePit]
 name={ffg:TILE_PIT_MAD28}
 image="{import}/img/Tile_Pit_MAD28"
-reverse=TileClearing2
+reverse=TileSideClearing2
 traits=inside medium temple
 
-[TileTunnel]
+[TileSideTunnel]
 name={ffg:TILE_TUNNEL_MAD28}
-image="{import}img/Tile_Tunnel_MAD28"
-reverse=TileRavine
+image="{import}/img/Tile_Tunnel_MAD28"
+reverse=TileSideRavine
 traits=inside small cave
 
-[TileRopeBridge]
+[TileSideRopeBridge]
 name={ffg:TILE_ROPE_BRIDGE_MAD28}
-image="{import}img/Tile_Rope_Bridge_MAD28"
-reverse=TileMosaicChamber
+image="{import}/img/Tile_Rope_Bridge_MAD28"
+reverse=TileSideMosaicChamber
 traits=outside medium
 
-[TileHollowGrove]
+[TileSideHollowGrove]
 name={ffg:TILE_HOLLOW_GROVE_MAD28}
-image="{import}img/Tile_Hollow_Grove_MAD28"
-reverse=TileSunlitChamber
+image="{import}/img/Tile_Hollow_Grove_MAD28"
+reverse=TileSideSunlitChamber
 traits=outside small
 
-[TileCrumblingPlaza]
+[TileSideCrumblingPlaza]
 name={ffg:TILE_CRUMBLING_PLAZA_MAD28}
-image="{import}img/Tile_Crumbling_Plaza_MAD28"
-reverse=TilePoolChamber
+image="{import}/img/Tile_Crumbling_Plaza_MAD28"
+reverse=TileSidePoolChamber
 traits=outside medium
 
-[TileShrine]
+[TileSideShrine]
 name={ffg:TILE_SHRINE_MAD28}
-image="{import}img/Tile_Shrine_MAD28"
-reverse=TileHallChamber1
+image="{import}/img/Tile_Shrine_MAD28"
+reverse=TileSideHallChamber1
 traits=outside small
 
-[TileJungleRuins1]
+[TileSideJungleRuins1]
 name={ffg:TILE_JUNGLE_RUINS_1_MAD28}
-image="{import}img/Tile_Jungle_Ruins_1_MAD28"
-reverse=TileBedChamber
+image="{import}/img/Tile_Jungle_Ruins_1_MAD28"
+reverse=TileSideBedChamber
 traits=outside small
 
-[TileJungleRuins2]
+[TileSideJungleRuins2]
 name={ffg:TILE_JUNGLE_RUINS_2_MAD28}
-image="{import}img/Tile_Jungle_Ruins_2_MAD28"
-reverse=TileStorageChamber
+image="{import}/img/Tile_Jungle_Ruins_2_MAD28"
+reverse=TileSideStorageChamber
 traits=outside small
 
-[TileRiver1]
+[TileSideRiver1]
 name={ffg:TILE_RIVER_1_MAD28}
-image="{import}img/Tile_River_1_MAD28"
-reverse=TileAltarChamber
+image="{import}/img/Tile_River_1_MAD28"
+reverse=TileSideAltarChamber
 traits=outside small river
 
-[TileRiver2]
+[TileSideRiver2]
 name={ffg:TILE_RIVER_2_MAD28}
-image="{import}img/Tile_River_2_MAD28"
-reverse=TileAntechamber
+image="{import}/img/Tile_River_2_MAD28"
+reverse=TileSideAntechamber
 traits=outside small river
 
-[TileRiverCrossing]
+[TileSideRiverCrossing]
 name={ffg:TILE_RIVER_CROSSING_MAD28}
-image="{import}img/Tile_River_Crossing_MAD28"
-reverse=TileRuinedChamber
+image="{import}/img/Tile_River_Crossing_MAD28"
+reverse=TileSideRuinedChamber
 traits=outside small river
 
-[TileRiverEdge]
+[TileSideRiverEdge]
 name={ffg:TILE_RIVER_EDGE_MAD28}
-image="{import}img/Tile_River_Edge_MAD28"
-reverse=TileThroneChamber
+image="{import}/img/Tile_River_Edge_MAD28"
+reverse=TileSideThroneChamber
 traits=outside medium river
 
-[TileCampsite]
+[TileSideCampsite]
 name={ffg:TILE_CAMPSITE_MAD28}
-image="{import}img/Tile_Campsite_MAD28"
-reverse=TileHallChamber2
+image="{import}/img/Tile_Campsite_MAD28"
+reverse=TileSideHallChamber2
 traits=outside small
 
-[TileClearing1]
+[TileSideClearing1]
 name={ffg:TILE_CLEARING_1_MAD28}
-image="{import}img/Tile_Clearing_1_MAD28"
-reverse=TileVerdantChamber
+image="{import}/img/Tile_Clearing_1_MAD28"
+reverse=TileSideVerdantChamber
 traits=outside small
 
 ;FFG named the tile like the room in it. It is "Clearing 2" and inside is the "Abandoned Hut".
-[TileClearing2]
+[TileSideClearing2]
 name={ffg:TILE_ABANDONED_HUT_MAD28}
-image="{import}img/Tile_Abandoned_Hut_MAD28"
-reverse=TilePit
+image="{import}/img/Tile_Abandoned_Hut_MAD28"
+reverse=TileSidePit
 traits=outside medium
 
-[TileTempleStairs]
+[TileSideTempleStairs]
 name={ffg:TILE_TEMPLE_STAIRS_MAD28}
-image="{import}img/Tile_Temple_Stairs_MAD28"
-reverse=TileCrackedChamber
+image="{import}/img/Tile_Temple_Stairs_MAD28"
+reverse=TileSideCrackedChamber
 traits=outside medium
 
-[TileThroneChamber]
+[TileSideThroneChamber]
 name={ffg:TILE_THRONE_CHAMBER_MAD28}
-image="{import}img/Tile_Throne_Chamber_MAD28"
-reverse=TileRiverEdge
+image="{import}/img/Tile_Throne_Chamber_MAD28"
+reverse=TileSideRiverEdge
 traits=inside medium temple
 
-[TileOvergrownPath]
+[TileSideOvergrownPath]
 name={ffg:TILE_OVERGROWN_PATH_MAD28}
-image="{import}img/Tile_Overgrown_Path_MAD28"
-reverse=TileBurialChamber
+image="{import}/img/Tile_Overgrown_Path_MAD28"
+reverse=TileSideBurialChamber
 traits=outside small
 
-[TileAltarChamber]
+[TileSideAltarChamber]
 name={ffg:TILE_ALTAR_CHAMBER_MAD28}
-image="{import}img/Tile_Altar_Chamber_MAD28"
-reverse=TileRiver1
+image="{import}/img/Tile_Altar_Chamber_MAD28"
+reverse=TileSideRiver1
 traits=inside small
 
-[TileSunlitChamber]
+[TileSideSunlitChamber]
 name={ffg:TILE_SUNLIT_CHAMBER_MAD28}
-image="{import}img/Tile_Sunlit_Chamber_MAD28"
-reverse=TileHollowGrove
+image="{import}/img/Tile_Sunlit_Chamber_MAD28"
+reverse=TileSideHollowGrove
 traits=inside small temple
 
-[TileRuinedHut]
+[TileSideRuinedHut]
 name={ffg:TILE_RUINED_HUT_MAD28}
-image="{import}img/Tile_Ruined_Hut_MAD28"
-reverse=TileStatueChamber
+image="{import}/img/Tile_Ruined_Hut_MAD28"
+reverse=TileSideStatueChamber
 traits=outside medium
 
-[TileHallChamber1]
+[TileSideHallChamber1]
 name={ffg:TILE_HALL_CHAMBER_1_MAD28}
-image="{import}img/Tile_Hall_Chamber_1_MAD28"
-reverse=TileShrine
+image="{import}/img/Tile_Hall_Chamber_1_MAD28"
+reverse=TileSideShrine
 traits=inside small temple
 
-[TileHallChamber2]
+[TileSideHallChamber2]
 name={ffg:TILE_HALL_CHAMBER_2_MAD28}
-image="{import}img/Tile_Hall_Chamber_2_MAD28"
-reverse=TileCampsite
+image="{import}/img/Tile_Hall_Chamber_2_MAD28"
+reverse=TileSideCampsite
 traits=inside small temple
 
-[TileStorageChamber]
+[TileSideStorageChamber]
 name={ffg:TILE_STORAGE_CHAMBER_MAD28}
-image="{import}img/Tile_Storage_Chamber_MAD28"
-reverse=TileJungleRuins2
+image="{import}/img/Tile_Storage_Chamber_MAD28"
+reverse=TileSideJungleRuins2
 traits=inside small temple
 
-[TilePoolChamber]
+[TileSidePoolChamber]
 name={ffg:TILE_POOL_CHAMBER_MAD28}
-image="{import}img/Tile_Pool_Chamber_MAD28"
-reverse=TileCrumblingPlaza
+image="{import}/img/Tile_Pool_Chamber_MAD28"
+reverse=TileSideCrumblingPlaza
 traits=inside medium cave water
 
-[TileMosaicChamber]
+[TileSideMosaicChamber]
 name={ffg:TILE_MOSAIC_CHAMBER_MAD28}
-image="{import}img/Tile_Mosaic_Chamber_MAD28"
-reverse=TileRopeBridge
+image="{import}/img/Tile_Mosaic_Chamber_MAD28"
+reverse=TileSideRopeBridge
 traits=inside medium temple
 
-[TileRavine]
+[TileSideRavine]
 name={ffg:TILE_RAVINE_MAD28}
-image="{import}img/Tile_Ravine_MAD28"
-reverse=TileTunnel
+image="{import}/img/Tile_Ravine_MAD28"
+reverse=TileSideTunnel
 traits=outside small
 
-[TileAntechamber]
+[TileSideAntechamber]
 name={ffg:TILE_ANTECHAMBER_MAD28}
-image="{import}img/Tile_Antechamber_MAD28"
-reverse=TileRiver2
+image="{import}/img/Tile_Antechamber_MAD28"
+reverse=TileSideRiver2
 traits=inside small temple
 
-[TileCrackedChamber]
+[TileSideCrackedChamber]
 name={ffg:TILE_CRACKED_CHAMBER_MAD28}
-image="{import}img/Tile_Cracked_Chamber_MAD28"
-reverse=TileTempleStairs
+image="{import}/img/Tile_Cracked_Chamber_MAD28"
+reverse=TileSideTempleStairs
 traits=inside medium temple
 
-[TileRuinedChamber]
+[TileSideRuinedChamber]
 name={ffg:TILE_RUINED_CHAMBER_MAD28}
-image="{import}img/Tile_Ruined_Chamber_MAD28"
-reverse=TileRiverCrossing
+image="{import}/img/Tile_Ruined_Chamber_MAD28"
+reverse=TileSideRiverCrossing
 traits=inside small temple
