Added "monster" trait to all normal monster.

--- a/unity/Assets/StreamingAssets/content/D2E/base/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/base/monsters.ini
@@ -7,7 +7,7 @@ image="{import}/img/Monster_Zombie"
 ; Description text regarding surge/ability use
 info={ffg:INSTRUCTION_ZOMBIE}
 ; This will probably need some work to standardise
-traits=undead melee cursed building small
+traits=undead melee cursed building small monster
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
 activation=Brawler1
@@ -16,21 +16,21 @@ activation=Brawler1
 name={ffg:GOBLIN_ARCHER}
 image="{import}/img/Monster_Goblin"
 info={ffg:INSTRUCTION_GOBLIN_ARCHER}
-traits=ranged cave building small goblin
+traits=ranged cave building small goblin monster
 activation=Range1 Range2 Range3
 
 [MonsterCaveSpider]
 name={ffg:CAVE_SPIDER}
 image="{import}/img/Monster_CaveSpider"
 info={ffg:INSTRUCTION_CAVE_SPIDER}
-traits=melee cave wilderness small
+traits=melee cave wilderness small monster
 activation=Skirmisher1 Skirmisher2 Skirmisher3
 
 [MonsterFleshMoulder]
 name={ffg:FLESH_MOULDER}
 image="{import}/img/Monster_FleshMoulder"
 info={ffg:INSTRUCTION_FLESH_MOULDER}
-traits=ranged cursed civilized small
+traits=ranged cursed civilized small monster
 activation=Range1 Range2 Range3
 
 [MonsterBarghest]
@@ -38,32 +38,32 @@ name={ffg:BARGHEST}
 image="{import}/img/Monster_Barghest"
 imageplace="{import}/img/Monster_Barghest_Placement"
 info={ffg:INSTRUCTION_BARGHEST}
-traits=melee dark wilderness medium undead
+traits=melee dark wilderness medium undead monster
 activation=Brawler1 Brawler2 Brawler3
 
 [MonsterEttin]
 name={ffg:ETTIN}
 image="{import}/img/Monster_Ettin"
 info={ffg:INSTRUCTION_ETTIN}
-traits=melee mountain cave huge
+traits=melee mountain cave huge monster
 activation=Brawler1 Brawler2 Brawler3
 
 [MonsterElemental]
 name={ffg:ELEMENTAL}
 image="{import}/img/Monster_Elemental"
 info={ffg:INSTRUCTION_ELEMENTAL}
-traits=ranged cold hot huge
+traits=ranged cold hot huge monster
 
 [MonsterMerriod]
 name={ffg:MERRIOD}
 image="{import}/img/Monster_Merriod"
 info={ffg:INSTRUCTION_MERRIOD}
-traits=melee water wilderness huge
+traits=melee water wilderness huge monster
 
 [MonsterShadowDragon]
 name={ffg:SHADOW_DRAGON}
 image="{import}/img/Monster_ShadowDragon"
 imageplace="{import}/img/Monster_ShadowDragon_Placement"
 info={ffg:INSTRUCTION_SHADOW_DRAGON}
-traits=melee dark cave massive
+traits=melee dark cave massive monster
 activation=Brawler1 Brawler2 Brawler2
