--- a/unity/Assets/StreamingAssets/content/D2E/boxed/lotw/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/boxed/lotw/monsters.ini
@@ -2,12 +2,12 @@
 name={ffg:FIRE_IMP}
 image="{import}/img/Monster_FireImps"
 info={ffg:INSTRUCTION_FIRE_IMP}
-traits=ranged hot cursed small
+traits=ranged hot cursed small monster
 activation=Range1 Range2 Range3
 
 [MonsterHybridSentinel]
 name={ffg:HYBRID_SENTINEL}
 image="{import}/img/Monster_HybridSentinel"
 info={ffg:INSTRUCTION_HYBRID_SENTINEL}
-traits=melee mountain cave small
+traits=melee mountain cave small monster
 activation=Brawler1 Brawler2 Brawler3
