--- a/unity/Assets/StreamingAssets/content/D2E/boxed/son/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/boxed/son/monsters.ini
@@ -2,7 +2,7 @@
 name={ffg:RAT_SWARM}
 image="{import}/img/Monster_RatSwarm"
 info={ffg:INSTRUCTION_RAT_SWARM}
-traits=melee building dark medium
+traits=melee building dark medium monster
 activation=Skirmisher1 Skirmisher2 Skirmisher3
 imageplace="{import}/img/Monster_RatSwarm_Placement"
 
@@ -10,19 +10,19 @@ imageplace="{import}/img/Monster_RatSwarm_Placement"
 name={ffg:CHANGELING}
 image="{import}/img/Monster_Changeling"
 info={ffg:INSTRUCTION_CHANGELING}
-traits=melee civilized cursed small
+traits=melee civilized cursed small monster
 activation=Brawler1 Brawler2 Brawler3
 
 [MonsterIronbound]
 name={ffg:IRONBOUND}
 image="{import}/img/Monster_Ironbound"
 info={ffg:INSTRUCTION_IRONBOUND}
-traits=melee civilized building small
+traits=melee civilized building small monster
 activation=Brawler1 Brawler2 Brawler3
 
 [MonsterYnfernaelHulk]
 name={ffg:YNFERNAEL_HULK}
 image="{import}/img/Monster_YnfearnalHulk"
 info={ffg:INSTRUCTION_YNFERNAEL_HULK}
-traits=melee cursed hot huge
+traits=melee cursed hot huge monster
 activation=Brawler1 Brawler2 Brawler3
