--- a/unity/Assets/StreamingAssets/content/D2E/boxed/tctr/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/boxed/tctr/monsters.ini
@@ -2,19 +2,19 @@
 name={ffg:MARROW_PRIEST}
 image="{import}/img/Monster_MarrowPriest"
 info={ffg:INSTRUCTION_MARROW_PRIEST}
-traits=ranged dark building small
+traits=ranged dark building small monster
 activation=Skirmisher1 Skirmisher2 Skirmisher3
 
 [MonsterTheDispossessed]
 name={ffg:DISPOSSESSED}
 image="{import}/img/Monster_Dispossessed"
 info={ffg:INSTRUCTION_DISPOSSESSED}
-traits=melee cursed civilized small undead
+traits=melee cursed civilized small undead monster
 
 [MonsterShamblingColossus]
 name={ffg:SHAMBLING_COLOSSUS}
 image="{import}/img/Monster_ShamblingColossus"
 info={ffg:INSTRUCTION_SHAMBLING_COLOSSUS}
-traits=melee cursed wilderness medium undead
+traits=melee cursed wilderness medium undead monster
 activation=Brawler1 Brawler2 Brawler3
 imageplace="{import}/img/Monster_ShamblingColossus_Placement"
