--- a/unity/Assets/StreamingAssets/content/D2E/boxed/tt/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/boxed/tt/monsters.ini
@@ -2,12 +2,12 @@
 name={ffg:HARPY}
 image="{import}/img/Monster_Harpy"
 info={ffg:INSTRUCTION_HARPY}
-traits=melee wilderness mountain small
+traits=melee wilderness mountain small monster
 activation=Brawler1 Brawler2 Brawler3
 
 [MonsterPlagueWorm]
 name={ffg:PLAGUE_WORM}
 image="{import}/img/Monster_PlagueWorm"
 info={ffg:INSTRUCTION_PLAGUE_WORM}
-traits=melee water cave medium
+traits=melee water cave medium monster
 imageplace="{import}/img/Monster_PlagueWorm_Placement"
