--- a/unity/Assets/StreamingAssets/content/D2E/ck/aod/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/ck/aod/monsters.ini
@@ -2,28 +2,28 @@
 name={ffg:CHAOS_BEAST}
 image="{import}/img/Monster_ChaosBeast"
 info={ffg:INSTRUCTION_CHAOS_BEAST}
-traits=ranged dark cursed huge
+traits=ranged dark cursed huge monster
 activation=Range1 Range2 Range3
 
 [MonsterDarkPriest]
 name={ffg:DARK_PRIEST}
 image="{import}/img/Monster_DarkPriest"
 info={ffg:INSTRUCTION_DARK_PRIEST}
-traits=ranged civilized cursed small
+traits=ranged civilized cursed small monster
 activation=Range1 Range2 Range3
 
 [MonsterTroll]
 name={ffg:TROLL}
 image="{import}/img/Monster_Troll"
 info="No additional instructions."
-traits=melee mountain cave huge
+traits=melee mountain cave huge monster
 activation=Brawler1 Brawler2 Brawler3
 
 [MonsterDeepElf]
 name={ffg:DEEP_ELF}
 image="{import}/img/Monster_DeepElf"
 info={ffg:INSTRUCTION_DEEP_ELF}
-traits=melee dark cave small
+traits=melee dark cave small monster
 activation=Brawler1 Brawler2 Brawler3
 
 [MonsterBloodApe]
@@ -32,5 +32,5 @@ image="{import}/img/Monster_BloodApe"
 ; This is missing so we'll just use the normal image stretched
 ; imageplace="{import}/img/Monster_BloodApe_Placement"
 info={ffg:INSTRUCTION_BLOOD_APE}
-traits=melee hot cave medium
+traits=melee hot cave medium monster
 activation=Brawler1 Brawler2 Brawler3
