--- a/unity/Assets/StreamingAssets/content/D2E/ck/toi/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/ck/toi/monsters.ini
@@ -3,33 +3,33 @@ name={ffg:ICE_WYRM}
 image="{import}/img/Monster_IceWyrm"
 imageplace="{import}/img/Monster_IceWyrm_Placement"
 info="No additional instructions."
-traits=melee cave cold massive
+traits=melee cave cold massive monster
 activation=Brawler1 Brawler2 Brawler3
 
 [MonsterShade]
 name={ffg:SHADE}
 image="No additional instructions."
 info={ffg:INSTRUCTION_SHADE}
-traits=melee cursed dark small
+traits=melee cursed dark small monster
 activation=Skirmisher1 Skirmisher2 Skirmisher3
 
 [MonsterLavaBeetle]
 name={ffg:LAVA_BEETLE}
 image="{import}/img/Monster_LavaBeetle"
 info={ffg:INSTRUCTION_LAVA_BEETLE}
-traits=ranged cave hot small
+traits=ranged cave hot small monster
 activation=Range1 Range2 Range3
 
 [MonsterMedusa]
 name={ffg:MEDUSA}
 image="{import}/img/Monster_Medusa"
 info={ffg:INSTRUCTION_MEDUSA}
-traits=ranged building cursed small
+traits=ranged building cursed small monster
 activation=Range1 Range2 Range3
 
 [MonsterWendigo]
 name={ffg:WENDIGO}
 image="{import}/img/Monster_Wendigo"
 info={ffg:INSTRUCTION_WENDIGO}
-traits=melee cold cave medium
+traits=melee cold cave medium monster
 activation=Skirmisher1 Skirmisher2 Skirmisher3
