--- a/unity/Assets/StreamingAssets/content/D2E/h&m/botw/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/h&m/botw/monsters.ini
@@ -2,7 +2,7 @@
 name={ffg:KOBOLD}
 image="{import}/img/Monster_Kobold"
 info={ffg:INSTRUCTION_KOBOLD}
-traits=melee cave building small
+traits=melee cave building small monster
 priority=1
 
 [MonsterHellhound]
@@ -10,12 +10,12 @@ name={ffg:HELLHOUND}
 image="{import}/img/Monster_Hellhound"
 imageplace="{import}/img/Monster_Hellhound_Placement"
 info={ffg:INSTRUCTION_HELLHOUND}
-traits=melee hot cursed medium
+traits=melee hot cursed medium monster
 priority=1
 
 [MonsterDeepElf]
 name={ffg:DEEP_ELF}
 image="{import}/img/Monster_DeepElf"
 info={ffg:INSTRUCTION_DEEP_ELF}
-traits=melee dark cave small
+traits=melee dark cave small monster
 activation=Brawler1 Brawler2 Brawler3
