--- a/unity/Assets/StreamingAssets/content/D2E/h&m/ooto/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/h&m/ooto/monsters.ini
@@ -2,19 +2,19 @@
 name={ffg:RAZORWING}
 image="{import}/img/Monster_Razorwing"
 info={ffg:INSTRUCTION_RAZORWING}
-traits=melee wilderness cave small
+traits=melee wilderness cave small monster
 activation=Skirmisher1 Skirmisher2 Skirmisher3
 
 [MonsterBeastmen]
 name={ffg:BEASTMAN}
 image="{import}/img/Monster_Beastman"
 info={ffg:INSTRUCTION_BEASTMAN}
-traits=melee wilderness mountain small
+traits=melee wilderness mountain small monster
 activation=Skirmisher1 Skirmisher2 Skirmisher3
 
 [MonsterBaneSpider]
 name={ffg:BANE_SPIDER}
 image="{import}/img/Monster_BaneSpider"
 info={ffg:INSTRUCTION_BANE_SPIDER}
-traits=ranged dark cave huge
+traits=ranged dark cave huge monster
 activation=Range1 Range2 Range3
