--- a/unity/Assets/StreamingAssets/content/D2E/h&m/sots/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/h&m/sots/monsters.ini
@@ -2,7 +2,7 @@
 name={ffg:FERROX}
 image="{import}/img/Monster_Ferrox"
 info={ffg:INSTRUCTION_FERROX}
-traits=melee cave water small
+traits=melee cave water small monster
 activation=Skirmisher1 Skirmisher2 Skirmisher3
 priority=1
 
@@ -12,7 +12,7 @@ image="{import}/img/Monster_BloodApe"
 ; This is missing so we'll just use the normal image stretched
 ; imageplace="{import}/img/Monster_BloodApe_Placement"
 info={ffg:INSTRUCTION_BLOOD_APE}
-traits=melee hot cave medium
+traits=melee hot cave medium monster
 activation=Brawler1 Brawler2 Brawler3
 priority=1
 
@@ -20,6 +20,6 @@ priority=1
 name={ffg:NAGA}
 image="{import}/img/Monster_Naga"
 info={ffg:INSTRUCTION_NAGA}
-traits=ranged water cave huge
+traits=ranged water cave huge monster
 activation=Range1 Range2 Range3
 priority=1
