--- a/unity/Assets/StreamingAssets/content/D2E/boxed/lor/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/boxed/lor/monsters.ini
@@ -2,26 +2,26 @@
 name={ffg:GOBLIN_WITCHER}
 image="{import}/img/Monster_GoblinWitcher"
 info={ffg:INSTRUCTION_GOBLIN_WITCHER}
-traits=ranged building cursed small
+traits=ranged building cursed small monster
 activation=Range1 Range2 Range3
 
 [MonsterVolucrixReaver]
 name={ffg:VOLUCRIX_REAVER}
 image="{import}/img/Monster_VolucrixReaver"
 info={ffg:INSTRUCTION_VOLUCRIX_REAVER}
-traits=melee building mountain small
+traits=melee building mountain small monster
 activation=Skirmisher1 Skirmisher2 Skirmisher3
 
 [MonsterCarrionDrake]
 name={ffg:CARRION_DRAKE}
 image="{import}/img/Monster_CarrionDrake"
 info={ffg:INSTRUCTION_CARRION_DRAKE}
-traits=melee water dark small
+traits=melee water dark small monster
 activation=Brawler1 Brawler2 Brawler3
 
 [MonsterArachyura]
 name={ffg:ARACHYURA}
 image="{import}/img/Monster_Arachyura"
 info={ffg:INSTRUCTION_ARACHYRUA}
-traits=melee wilderness cursed huge
+traits=melee wilderness cursed huge monster
 activation=Brawler1 Brawler2 Brawler3
