--- a/unity/Assets/StreamingAssets/content/D2E/boxed/mob/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/boxed/mob/monsters.ini
@@ -2,19 +2,19 @@
 name={ffg:BONE_HORROR}
 image="{import}/img/Monster_BoneHorror"
 info={ffg:INSTRUCTION_BONE_HORROR}
-traits=melee cursed cave small undead
+traits=melee cursed cave small undead monster
 activation=Range2 Range3
 
 [MonsterReanimate]
 name={ffg:REANIMATE}
 image="{import}/img/Monster_Reanimate"
 info={ffg:INSTRUCTION_REANIMATE}
-traits=melee cursed civilized small undead
+traits=melee cursed civilized small undead monster
 activation=Brawler1 Brawler2 Brawler3
 
 [MonsterBroodwalker]
 name={ffg:BROODWALKER}
 image="{import}/img/Monster_Broodwalker"
 info={ffg:INSTRUCTION_BROODWALKER}
-traits=melee dark building small undead
+traits=melee dark building small undead monster
 activation=Brawler1 Brawler2 Brawler3
