--- a/unity/Assets/StreamingAssets/content/D2E/ck/wod/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/ck/wod/monsters.ini
@@ -2,18 +2,18 @@
 name={ffg:GOLEM}
 image="{import}/img/Monster_Golem"
 info={ffg:INSTRUCTION_GOLEM}
-traits=melee mountain building huge
+traits=melee mountain building huge monster
 activation=Brawler1 Brawler2 Brawler3
 
 [MonsterKobold]
 name={ffg:KOBOLD}
 image="{import}/img/Monster_Kobold"
 info="Kobolds spend ± in the following order: \n ±: Swarm \n\nSplit: Place the minion Kobolds in adjacent spaces that are closest to the closest hero."
-traits=melee cave building small
+traits=melee cave building small monster
 
 [MonsterFerrox]
 name={ffg:FERROX}
 image="{import}/img/Monster_Ferrox"
 info={ffg:INSTRUCTION_FERROX}
-traits=melee cave water small
+traits=melee cave water small monster
 activation=Skirmisher1 Skirmisher2 Skirmisher3
