--- a/unity/Assets/StreamingAssets/content/D2E/h&m/cod/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/h&m/cod/monsters.ini
@@ -2,19 +2,19 @@
 name={ffg:GIANT}
 image="{import}/img/Monster_Giant"
 info={ffg:INSTRUCTION_GIANTS}
-traits=melee mountain wilderness huge
+traits=melee mountain wilderness huge monster
 activation=Brawler1 Brawler2 Brawler3
 
 [MonsterChaosBeast]
 name={ffg:CHAOS_BEAST}
 image="{import}/img/Monster_ChaosBeast"
 info={ffg:INSTRUCTION_CHAOS_BEAST}
-traits=ranged dark cursed huge
+traits=ranged dark cursed huge monster
 activation=Range1 Range2 Range3
 
 [MonsterLavaBeetle]
 name={ffg:LAVA_BEETLE}
 image="{import}/img/Monster_LavaBeetle"
 info={ffg:INSTRUCTION_LAVA_BEETLE}
-traits=ranged cave hot small
+traits=ranged cave hot small monster
 activation=Range1 Range2 Range3
