--- a/unity/Assets/StreamingAssets/content/D2E/h&m/cotf/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/h&m/cotf/monsters.ini
@@ -2,20 +2,20 @@
 name={ffg:GOLEM}
 image="{import}/img/Monster_Golem"
 info={ffg:INSTRUCTION_GOLEM}
-traits=melee mountain building huge
+traits=melee mountain building huge monster
 activation=Brawler1 Brawler2 Brawler3
 
 [MonsterMedusa]
 name={ffg:MEDUSA}
 image="{import}/img/Monster_Medusa"
 info={ffg:INSTRUCTION_MEDUSA}
-traits=ranged building cursed small
+traits=ranged building cursed small monster
 activation=Range1 Range2 Range3
 
 [MonsterSorcerer]
 name={ffg:SORCERER}
 image="{import}/img/Monster_Sorcerer"
 info={ffg:INSTRUCTION_SORCERER}
-traits=ranged civilized building small
+traits=ranged civilized building small monster
 activation=Range1 Range2
 priority=1
