--- a/unity/Assets/StreamingAssets/content/D2E/h&m/soe/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/h&m/soe/monsters.ini
@@ -3,7 +3,7 @@ name={ffg:ICE_WYRM}
 image="{import}/img/Monster_IceWyrm"
 imageplace="{import}/img/Monster_IceWyrm_Placement"
 info={ffg:INSTRUCTION_ICE_WYRM}
-traits=melee cave cold massive
+traits=melee cave cold massive monster
 activation=Brawler1 Brawler2 Brawler3
 priority=1
 
@@ -11,7 +11,7 @@ priority=1
 name={ffg:DARK_MINOTAUR}
 image="{import}/img/Monster_DarkMinotaur"
 info={ffg:DARK_MINOTAUR_INSTRUCTION}
-traits=melee cursed civilized small
+traits=melee cursed civilized small monster
 activation=Brawler1 Brawler2 Brawler3
 priority=1
 
@@ -19,6 +19,6 @@ priority=1
 name={ffg:SHADE}
 image="{import}/img/Monster_Shade"
 info={ffg:INSTRUCTION_SHADE}
-traits=melee cursed cold small undead
+traits=melee cursed cold small undead monster
 activation=Skirmisher1 Skirmisher2 Skirmisher3
 priority=1
