--- a/unity/Assets/StreamingAssets/content/D2E/h&m/vod/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/h&m/vod/monsters.ini
@@ -3,7 +3,7 @@ name={ffg:MANTICORE}
 image="{import}/img/Monster_Manticore"
 imageplace="{import}/img/Monster_Manticore_Placement"
 info={ffg:INSTURCTION_MANTICORE}
-traits=ranged wilderness dark medium
+traits=ranged wilderness dark medium monster
 activation=Range1 Range2 Range3
 priority=1
 
@@ -11,7 +11,7 @@ priority=1
 name={ffg:OGRE}
 image="{import}/img/Monster_Ogre"
 info={ffg:INSTRUCTION_OGRE}
-traits=melee building cave huge
+traits=melee building cave huge monster
 activation=Skirmisher1 Skirmisher2 Skirmisher3
 priority=1
 
@@ -19,6 +19,6 @@ priority=1
 name={ffg:TROLL}
 image="{import}/img/Monster_Troll"
 info={ffg:INSTRUCTION_TROLL}
-traits=melee mountain cave huge
+traits=melee mountain cave huge monster
 activation=Brawler1 Brawler2 Brawler3
 priority=1
