Fixed  Drew Walker and Naomi O'Bannion tokens

--- a/unity/Assets/StreamingAssets/content/MoM/soa/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/soa/tokens.ini
@@ -55,18 +55,18 @@ height=130
 width=130
 
 [TokenNaomiOBannion]
-image="img/SpriteAtlasTexture-token"
+image="img/naomi_o_bannion_token"
 x=0
-y=638
-height=130
-width=130
+y=0
+height=256
+width=256
 
 [TokenDrewWalker]
-image="img/SpriteAtlasTexture-token"
-x=780
-y=780
-height=130
-width=130
+image="img/drew_walker_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenAliceLuxley]
 image="img/SpriteAtlasTexture-token"
