Remove support for scenario image and replaced it with a placeholder

--- a/unity/Assets/StreamingAssets/content/MoM/base/images.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/images.ini
@@ -32,157 +32,157 @@ image="{import}/img/CutsceneTextTopper"
 image="{import}/img/Image_1"
 
 [ImageMurderInvestigation]
-image="{import}/img/Image_1_000002"
+image="img/image_no_longer_supported"
 
 [ImageSlime]
-image="{import}/img/Image_1_000003"
+image="img/image_no_longer_supported"
 
 [ImageOfficeWithBlood]
-image="{import}/img/Image_1_000004"
+image="img/image_no_longer_supported"
 
 [ImageDunwichHorror]
-image="{import}/img/Image_1_000005"
+image="img/image_no_longer_supported"
 
 [ImageDarkReflections]
-image="{import}/img/Image_1_000006"
+image="img/image_no_longer_supported"
 
 [ImageRitualGoneWrong]
-image="{import}/img/Image_1_000007"
+image="img/image_no_longer_supported"
 
 [ImageBuriedAlive]
-image="{import}/img/Image_1_000008"
+image="img/image_no_longer_supported"
 
 [ImageArtRoom]
-image="{import}/img/Image_1_000009"
+image="img/image_no_longer_supported"
 
 [ImageGoodNowStayDead]
-image="{import}/img/Image_1_000010"
+image="img/image_no_longer_supported"
 
 [ImageWounded]
-image="{import}/img/Image_1_000011"
+image="img/image_no_longer_supported"
 
 [ImageBloodyKukri]
-image="{import}/img/Image_1_000012"
+image="img/image_no_longer_supported"
 
 [ImageHexagramRitual]
-image="{import}/img/Image_1_000013"
+image="img/image_no_longer_supported"
 
 [ImageDrHenryArmitage]
-image="{import}/img/Image_1_000014"
+image="img/image_no_longer_supported"
 
 [ImageScream]
-image="{import}/img/Image_1_000015"
+image="img/image_no_longer_supported"
 
 [ImageOfficeLazy]
-image="{import}/img/Image_1_000016"
+image="img/image_no_longer_supported"
 
 [ImageLibary]
-image="{import}/img/Image_1_000017"
+image="img/image_no_longer_supported"
 
 [ImageMuseum]
-image="{import}/img/Image_1_000018"
+image="img/image_no_longer_supported"
 
 [ImageSpell]
-image="{import}/img/Image_1_000019"
+image="img/image_no_longer_supported"
 
 [ImageWorkroom]
-image="{import}/img/Image_1_000020"
+image="img/image_no_longer_supported"
 
 [ImageFogWindy]
-image="{import}/img/Image_1_000021"
+image="img/image_no_longer_supported"
 
 [ImageMuseumHuntingHorror]
-image="{import}/img/Image_1_000022"
+image="img/image_no_longer_supported"
 
 [ImageDeepOnes]
-image="{import}/img/Image_1_000023"
+image="img/image_no_longer_supported"
 
 [ImageDocks]
-image="{import}/img/Image_1_000024"
+image="img/image_no_longer_supported"
 
 [ImageArmStuck]
-image="{import}/img/Image_1_000025"
+image="img/image_no_longer_supported"
 
 [ImageSpellCaster]
-image="{import}/img/Image_1_000026"
+image="img/image_no_longer_supported"
 
 [ImageOfficeAsleep]
-image="{import}/img/Image_1_000027"
+image="img/image_no_longer_supported"
 
 [ImageVillageDecayed]
-image="{import}/img/Image_1_000028"
+image="img/image_no_longer_supported"
 
 [ImageWoodsDogingBullets]
-image="{import}/img/Image_1_000029"
+image="img/image_no_longer_supported"
 
 [ImageCoveredBodyWithBlood]
-image="{import}/img/Image_1_000030"
+image="img/image_no_longer_supported"
 
 [ImageFogMansion]
-image="{import}/img/Image_1_000031"
+image="img/image_no_longer_supported"
 
 [ImageLibaryResearch]
-image="{import}/img/Image_1_000032"
+image="img/image_no_longer_supported"
 
 [ImageFightingTentacles]
-image="{import}/img/Image_1_000033"
+image="img/image_no_longer_supported"
 
 [ImageMuseumRobber]
-image="{import}/img/Image_1_000034"
+image="img/image_no_longer_supported"
 
 [ImageCityMessedUpWithBlood]
-image="{import}/img/Image_1_000035"
+image="img/image_no_longer_supported"
 
 [ImageGunThemDown]
-image="{import}/img/Image_1_000036"
+image="img/image_no_longer_supported"
 
 [ImageDissectionRoom]
-image="{import}/img/Image_1_000037"
+image="img/image_no_longer_supported"
 
 [ImageDocksBuringBoat]
-image="{import}/img/Image_1_000038"
+image="img/image_no_longer_supported"
 
 [ImageSpellMindtrick]
-image="{import}/img/Image_1_000039"
+image="img/image_no_longer_supported"
 
 [ImageBookHolder]
-image="{import}/img/Image_1_000040"
+image="img/image_no_longer_supported"
 
 [ImageSyringe]
-image="{import}/img/Image_1_000041"
+image="img/image_no_longer_supported"
 
 [ImageBustedOpen]
-image="{import}/img/Image_1_000042"
+image="img/image_no_longer_supported"
 
 [ImageHillStreetPolicePatrol]
-image="{import}/img/Image_1_000043"
+image="img/image_no_longer_supported"
 
 [ImageBook]
-image="{import}/img/Image_1_000044"
+image="img/image_no_longer_supported"
 
 [ImageNightWatch]
-image="{import}/img/Image_1_000045"
+image="img/image_no_longer_supported"
 
 [ImageCarTentacleEscape]
-image="{import}/img/Image_1_000046"
+image="img/image_no_longer_supported"
 
 [ImageChurchDecayed]
-image="{import}/img/Image_1_000047"
+image="img/image_no_longer_supported"
 
 [ImageMuseumInvitation]
-image="{import}/img/Image_1_000048"
+image="img/image_no_longer_supported"
 
 [ImageFogVillage]
-image="{import}/img/Image_1_000049"
+image="img/image_no_longer_supported"
 
 [ImageInnsmouthHorror]
-image="{import}/img/Image_1_000050"
+image="img/image_no_longer_supported"
 
 [ImageDinnerInvitation]
-image="{import}/img/Image_1_000051"
+image="img/image_no_longer_supported"
 
 [ImageStarVampire]
-image="{import}/img/Image_1_000052"
+image="img/image_no_longer_supported"
 
 [ImagePortal]
 image="{import}/img/Image_1_SHARED"
@@ -194,151 +194,151 @@ image="{import}/img/Image_1_SHARED_000002"
 image="{import}/img/Image_2"
 
 [ImageMiskatonicCampus]
-image="{import}/img/Image_2_000002"
+image="img/image_no_longer_supported"
 
 [ImageClueFound]
-image="{import}/img/Image_2_000003"
+image="img/image_no_longer_supported"
 
 [ImageDarkReflections2]
-image="{import}/img/Image_2_000004"
+image="img/image_no_longer_supported"
 
 [ImageMiGoSneakUp]
-image="{import}/img/Image_2_000005"
+image="img/image_no_longer_supported"
 
 [ImagePortalSpell]
-image="{import}/img/Image_2_000006"
+image="img/image_no_longer_supported"
 
 [ImageOfficeTypewriter]
-image="{import}/img/Image_2_000007"
+image="img/image_no_longer_supported"
 
 [ImageRoomVineCovered]
-image="{import}/img/Image_2_000008"
+image="img/image_no_longer_supported"
 
 [ImageFogCityStreets]
-image="{import}/img/Image_2_000009"
+image="img/image_no_longer_supported"
 
 [ImageHandcuffed]
-image="{import}/img/Image_2_000010"
+image="img/image_no_longer_supported"
 
 [ImageDarkReflections3]
-image="{import}/img/Image_2_000011"
+image="img/image_no_longer_supported"
 
 [ImageOfficeBriefing]
-image="{import}/img/Image_2_000012"
+image="img/image_no_longer_supported"
 
 [ImageDinnerParty]
-image="{import}/img/Image_2_000013"
+image="img/image_no_longer_supported"
 
 [ImageInnsmouthCity]
-image="{import}/img/Image_2_000014"
+image="img/image_no_longer_supported"
 
 [ImageMurderInvestigationBedroom]
-image="{import}/img/Image_2_000015"
+image="img/image_no_longer_supported"
 
 [ImagePoliceMan]
-image="{import}/img/Image_2_000016"
+image="img/image_no_longer_supported"
 
 [ImageSpellVision]
-image="{import}/img/Image_2_000017"
+image="img/image_no_longer_supported"
 
 [ImageFogWoods]
-image="{import}/img/Image_2_000018"
+image="img/image_no_longer_supported"
 
 [ImageBurningHouseRuneStone]
-image="{import}/img/Image_2_000019"
+image="img/image_no_longer_supported"
 
 [ImageFlashlightScared]
-image="{import}/img/Image_2_000020"
+image="img/image_no_longer_supported"
 
 [ImageRitualOnDeadBody]
-image="{import}/img/Image_2_000021"
+image="img/image_no_longer_supported"
 
 [ImagePoliceBuilding]
-image="{import}/img/Image_2_000022"
+image="img/image_no_longer_supported"
 
 [ImageLabStudy]
-image="{import}/img/Image_2_000023"
+image="img/image_no_longer_supported"
 
 [ImageMeeting]
-image="{import}/img/Image_2_000024"
+image="img/image_no_longer_supported"
 
 [ImageZombieKill]
-image="{import}/img/Image_2_000025"
+image="img/image_no_longer_supported"
 
 [ImageMuseumHall]
-image="{import}/img/Image_2_000026"
+image="img/image_no_longer_supported"
 
 [ImageFogWoods2]
-image="{import}/img/Image_2_000027"
+image="img/image_no_longer_supported"
 
 [ImageDarkReflections4]
-image="{import}/img/Image_2_000028"
+image="img/image_no_longer_supported"
 
 [ImageBackShot]
-image="{import}/img/Image_2_000029"
+image="img/image_no_longer_supported"
 
 [ImageMotorcycle]
-image="{import}/img/Image_2_000030"
+image="img/image_no_longer_supported"
 
 [ImageBarricadeBreaks]
-image="{import}/img/Image_2_000031"
+image="img/image_no_longer_supported"
 
 [ImageDispute]
-image="{import}/img/Image_2_000032"
+image="img/image_no_longer_supported"
 
 [ImageGraveyard]
-image="{import}/img/Image_2_000033"
+image="img/image_no_longer_supported"
 
 [ImageRitualStone]
-image="{import}/img/Image_2_000034
+image="img/image_no_longer_supported"
 
 [ImageSpellMindtrick2]
-image="{import}/img/Image_2_000035"
+image="img/image_no_longer_supported"
 
 [ImageAmulet]
-image="{import}/img/Image_2_000036"
+image="img/image_no_longer_supported"
 
 [ImageKillItWithFire]
-image="{import}/img/Image_2_000037"
+image="img/image_no_longer_supported"
 
 [ImageHandcuffed2]
-image="{import}/img/Image_2_000038"
+image="img/image_no_longer_supported"
 
 [ImageFarmDarkYoung]
-image="{import}/img/Image_2_000039"
+image="img/image_no_longer_supported"
 
 [ImageMuseumExhibition]
-image="{import}/img/Image_2_000040"
+image="img/image_no_longer_supported"
 
 [ImageDeepOne]
-image="{import}/img/Image_2_000041"
+image="img/image_no_longer_supported"
 
 [ImageZombie]
-image="{import}/img/Image_2_000042"
+image="img/image_no_longer_supported"
 
 [ImageSpellLightning]
-image="{import}/img/Image_2_000043"
+image="img/image_no_longer_supported"
 
 [ImageRitualPentagramCultists]
-image="{import}/img/Image_2_000044"
+image="img/image_no_longer_supported"
 
 [ImageBook2]
-image="{import}/img/Image_2_000045"
+image="img/image_no_longer_supported"
 
 [ImageCityAlleyway]
-image="{import}/img/Image_2_000046"
+image="img/image_no_longer_supported"
 
 [ImageMuseumBloodTrail]
-image="{import}/img/Image_2_000047"
+image="img/image_no_longer_supported"
 
 [ImageWoodsSwathOfDestruction]
-image="{import}/img/Image_2_000048"
+image="img/image_no_longer_supported"
 
 [ImageAngryMob]
-image="{import}/img/Image_2_000049"
+image="img/image_no_longer_supported"
 
 [ImageDocks2]
-image="{import}/img/Image_2_000050"
+image="img/image_no_longer_supported"
 
 [ImageVillage]
 image="{import}/img/Image_2_SHARED"
@@ -347,133 +347,133 @@ image="{import}/img/Image_2_SHARED"
 image="{import}/img/Image_3"
 
 [ImageDeepOne2]
-image="{import}/img/Image_3_000002"
+image="img/image_no_longer_supported"
 
 [ImageZombieGirl]
-image="{import}/img/Image_3_000003"
+image="img/image_no_longer_supported"
 
 [ImageStrangeSky]
-image="{import}/img/Image_3_000004"
+image="img/image_no_longer_supported"
 
 [ImageYogSothoth]
-image="{import}/img/Image_3_000005"
+image="img/image_no_longer_supported"
 
 [ImageMuseumArchive]
-image="{import}/img/Image_3_000006"
+image="img/image_no_longer_supported"
 
 [ImageTentacleAttack]
-image="{import}/img/Image_3_000007"
+image="img/image_no_longer_supported"
 
 [ImageCityAtNight]
-image="{import}/img/Image_3_000008"
+image="img/image_no_longer_supported"
 
 [ImageDriveBy]
-image="{import}/img/Image_3_000009"
+image="img/image_no_longer_supported"
 
 [ImageLetTheMotherfuckerBurn]
-image="{import}/img/Image_3_000010"
+image="img/image_no_longer_supported"
 
 [ImagePlaza]
-image="{import}/img/Image_3_000011"
+image="img/image_no_longer_supported"
 
 [ImageCityStreets]
-image="{import}/img/Image_3_000012"
+image="img/image_no_longer_supported"
 
 [ImageMuseumBuilding]
-image="{import}/img/Image_3_000013"
+image="img/image_no_longer_supported"
 
 [ImageTank]
-image="{import}/img/Image_3_000014"
+image="img/image_no_longer_supported"
 
 [ImagePoliceMan2]
-image="{import}/img/Image_3_000015"
+image="img/image_no_longer_supported"
 
 [ImageMuseumExhibitionAtNight]
-image="{import}/img/Image_3_000016"
+image="img/image_no_longer_supported"
 
 [ImageThisIsYouLastChance]
-image="{import}/img/Image_3_000017"
+image="img/image_no_longer_supported"
 
 [ImageDunwichCultists]
-image="{import}/img/Image_3_000018"
+image="img/image_no_longer_supported"
 
 [ImageWeirdStorage]
-image="{import}/img/Image_3_000019"
+image="img/image_no_longer_supported"
 
 [ImageRitualNeedsBlood]
-image="{import}/img/Image_3_000020"
+image="img/image_no_longer_supported"
 
 [ImageInnsmouthStreets]
-image="{import}/img/Image_3_000021"
+image="img/image_no_longer_supported"
 
 [ImageLockedAway]
-image="{import}/img/Image_3_000022"
+image="img/image_no_longer_supported"
 
 [ImageWeirdStorage2]
-image="{import}/img/Image_3_000023"
+image="img/image_no_longer_supported"
 
 [ImagePoliceConfession]
-image="{import}/img/Image_3_000024"
+image="img/image_no_longer_supported"
 
 [ImageDocksKiller]
-image="{import}/img/Image_3_000025"
+image="img/image_no_longer_supported"
 
 [ImageBadNews]
-image="{import}/img/Image_3_000026"
+image="img/image_no_longer_supported"
 
 [ImageMansionAtNight]
-image="{import}/img/Image_3_000027"
+image="img/image_no_longer_supported"
 
 [ImageSpellMoon]
-image="{import}/img/Image_3_000028"
+image="img/image_no_longer_supported"
 
 [ImageYouAreFinished]
-image="{import}/img/Image_3_000029"
+image="img/image_no_longer_supported"
 
 [ImageDissectionMiGo]
-image="{import}/img/Image_3_000030"
+image="img/image_no_longer_supported"
 
 [ImageYogSothothPlanet]
-image="{import}/img/Image_3_000031"
+image="img/image_no_longer_supported"
 
 [ImageHotelRoom]
-image="{import}/img/Image_3_000032"
+image="img/image_no_longer_supported"
 
 [ImageMausoleum]
-image="{import}/img/Image_3_000033"
+image="img/image_no_longer_supported"
 
 [ImageSewerInvestigation]
-image="{import}/img/Image_3_000034"
+image="img/image_no_longer_supported"
 
 [ImageThrall]
-image="{import}/img/Image_3_000035"
+image="img/image_no_longer_supported"
 
 [ImageFogGarden]
-image="{import}/img/Image_3_000036"
+image="img/image_no_longer_supported"
 
 [ImageYogSothoth2]
-image="{import}/img/Image_3_000037
+image="img/image_no_longer_supported"
 
 [ImageZombiesAtTheWindow]
-image="{import}/img/Image_3_000038"
+image="img/image_no_longer_supported"
 
 [ImageTentaclePalms]
-image="{import}/img/Image_3_000039"
+image="img/image_no_longer_supported"
 
 [ImageDarkReflections5]
-image="{import}/img/Image_3_000040"
+image="img/image_no_longer_supported"
 
 [ImageGraveyard2]
-image="{import}/img/Image_3_000041"
+image="img/image_no_longer_supported"
 
 [ImageCarDriver]
-image="{import}/img/Image_3_000042"
+image="img/image_no_longer_supported"
 
 [ImagePoliceMythosCreaturesAttack]
-image="{import}/img/Image_3_000043"
+image="img/image_no_longer_supported"
 
 [ImageFoundTheKey]
-image="{import}/img/Image_3_000044"
+image="img/image_no_longer_supported"
 
 [ImageOvergrowth]
 image="{import}/img/Image_3_SHARED"
@@ -482,16 +482,16 @@ image="{import}/img/Image_3_SHARED"
 image="{import}/img/Image_4"
 
 [ImageHotelRoomDark]
-image="{import}/img/Image_4_000002"
+image="img/image_no_longer_supported"
 
 [ImageSyringeDoctor]
-image="{import}/img/Image_4_000003"
+image="img/image_no_longer_supported"
 
 [ImageAlienClockwork]
-image="{import}/img/Image_4_000004"
+image="img/image_no_longer_supported"
 
 [ImageDoorOpening]
-image="{import}/img/Image_4_000005"
+image="img/image_no_longer_supported"
 
 [ImageGreenBG]
 image="{import}/img/Investigator_Phase"
