--- a/unity/Assets/StreamingAssets/content/D2E/boxed/mor/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/boxed/mor/monsters.ini
@@ -2,12 +2,12 @@
 name={ffg:BANDIT}
 image="{import}/img/Monster_Bandit"
 info={ffg:INSTRUCTION_BANDIT}
-traits=ranged wilderness building small
+traits=ranged wilderness building small monster
 activation=Range1 Range2 Range3
 
 [MonsterWraith]
 name={ffg:WRAITH}
 image="{import}/img/Monster_Wraith"
 info={ffg:INSTRUCTION_WRAITH}
-traits=ranged civilized cursed small
+traits=ranged civilized cursed small undead monster
 activation=Range1 Range2 Range3
