--- a/unity/Assets/StreamingAssets/content/D2E/h&m/god/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/h&m/god/monsters.ini
@@ -3,20 +3,20 @@ name={ffg:CRYPT_DRAGON}
 image="{import}/img/Monster_CryptDragon"
 imageplace="{import}/img/Monster_CryptDragon_Placement"
 info={ffg:INSTRUCTION_CRYPT_DRAGON}
-traits=ranged cursed dark massive
+traits=ranged cursed dark massive undead monster
 activation=Range1 Range2 Range3
 
 [MonsterDarkPriest]
 name={ffg:DARK_PRIEST}
 image="{import}/img/Monster_DarkPriest"
 info={ffg:INSTRUCTION_DARK_PRIEST}
-traits=ranged civilized cursed small
+traits=ranged civilized cursed small undead monster
 activation=Range1 Range2 Range3
 
 [MonsterWendigo]
 name={ffg:WENDIGO}
 image="{import}/img/Monster_Wendigo"
 info={ffg:INSTRUCTION_WENDIGO}
-traits=melee cold cave huge
+traits=melee cold cave huge monster
 activation=Skirmisher1 Skirmisher2 Skirmisher3
 priority=1
