--- a/unity/Assets/StreamingAssets/content/D2E/h&m/toc/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/h&m/toc/monsters.ini
@@ -2,19 +2,19 @@
 name={ffg:SKELETON_ARCHER}
 image="{import}/img/Monster_SkeletonArcher"
 info={ffg:INSTRUCTION_SKELETON_ARCHER}
-traits=ranged cursed civilized small
+traits=ranged cursed civilized small undead monster
 activation=Range1 Range2 Range3
 
 [MonsterCrowHag]
 name={ffg:CROW_HAG}
 image="{import}/img/Monster_CrowHag"
 info={ffg:INSTRUCTION_CROW_HAG}
-traits=ranged dark civilized small
+traits=ranged dark civilized small monster
 activation=Range1 Range2 Range3
 
 [MonsterDemonLord]
 name={ffg:DEMON_LORD}
 image="{import}/img/Monster_DemonLord"
 info={ffg:INSTRUCTION_DEMON_LORD}
-traits=ranged cursed hot huge
+traits=ranged cursed hot huge monster
 activation=Range1 Range2 Range3
