Fixed  Broken Hybrid Class
#1273 Fixed  Broken Hybrid Class

--- a/unity/Assets/StreamingAssets/content/D2E/boxed/ll/classes.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/boxed/ll/classes.ini
@@ -92,7 +92,7 @@ xp=3
 [ClassHeretic]
 name={ffg:CLASS_HERETIC_NAME}
 archetype=healer
-hybridarchetype=warrior
+hybridarchetype=mage
 
 [SkillHereticArcaneHealing]
 name={ffg:CLASS_HERETIC_1}
